Scala HelloWord crash

XMLWordPrintable

    • aarch32
    • linux

      Scala HelloWorld script crashes with following fatal report
      #
      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (assembler_aarch32.hpp:215), pid=27932, tid=0xb5198470
      # guarantee(val < (1U << nbits)) failed: Field too big for insn
      #
      # JRE version: OpenJDK Runtime Environment (8.0_102) (build 1.8.0_102-160812)
      # Java VM: OpenJDK Client VM (25.102-b160812 mixed mode linux-aarch32 )

            Assignee:
            Sergey Nazarkin
            Reporter:
            Sergey Nazarkin
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: