8167027: Scala HelloWord crash Reviewed-by: enevill